// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormToggle rendering renders expected elements 1`] = `
<div
  className="FormToggle"
>
  <div>
    <Label
      htmlFor="test"
      text="Test"
    />
  </div>
  <Toggle
    ariaLabel="Test"
    checked={true}
    className="FormToggle__field"
    componentId="test"
    id="test"
    onChange={[Function]}
  />
</div>
`;

exports[`FormToggle rendering renders expected elements when className is set 1`] = `
<div
  className="FormToggle TestClass"
>
  <div>
    <Label
      htmlFor="test"
      text="Test"
    />
  </div>
  <Toggle
    ariaLabel="Test"
    checked={true}
    className="FormToggle__field"
    componentId="test"
    id="test"
    onChange={[Function]}
  />
</div>
`;
